# okf-govuk-content

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE.md  README.md  SECURITY.md  WHATS_ON_GOVUK_OKF.md  pyproject.toml
.github/: CODEOWNERS  branch-protection.json  repository-policy.json
bundle/: 404.html  accessibility.html  app.js  checksums.json  core.js  data.js  demonstrator.js  index.html  index.md  log.md  okf-bundle.jsonld  okf-bundle.yamlld  okf-explorer.json  release-data-plane.js  search-contract.js  search.worker.js  styles.css
demo/: new-child-cohort.json
docs/: ai-input.md  architecture.md  implementation-status.md  new-child-demonstrator.md  post-hydration-runbook.md  repository-governance.md  reproducibility.md  sitemap-routing.md  terminal-activity-closure.md
evaluation/: README.md  manifest.json
explorer/: package.json
governance/: aim-assessment-source.json  aim-assessment.schema.json  charter.yaml  exceptions.yaml  implementation-status-source.json  launch-manifest.yaml  requirements-status.json  requirements.yaml  rights-review-ledger.json  risks.yaml  task-status.json  traceability-status.json  traceability.json
orchestration/: budgets.yaml  dag.yaml  models.lock.yaml
personas/: README.md  checksums.txt  coverage-matrix.json  coverage-matrix.jsonl  coverage.json  evidence.json  manifest.json  overlay-covering-array.json  saturation.json  seed.json  use-ontology.yamlld
planning/: AFHF_GOVUK_OKF_BRIEF_TRACEABILITY.md  AFHF_GOVUK_OKF_REQUIREMENTS_REGISTER.md  AFHF_GOVUK_OKF_SOTA_RESEARCH_IMPLEMENTATION_PLAN.md  (+2 more)
(+923 files in other folders)
