[project]
name = "govuk-okf"
version = "0.1.0"
description = "Deterministic GOV.UK metadata-to-OKF Bundle Wiki pipeline"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Chris Page" }]
dependencies = [
  "jsonschema[format]==4.26.0",
  "pyshacl==0.40.0",
]

[project.scripts]
govuk-okf = "govuk_okf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/govuk_okf"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
